	libfreeipmi/src/ipmi-sol-cmds.c, libfreeipmi/src/ipmi-lan-cmds.h,
	libfreeipmi/src/ipmi-lan-cmds.c,
	libfreeipmi/src/ipmi-serial-cmds.c,
	libfreeipmi/src/ipmi-serial-cmds.h: Alter naming convention.

	* libfreeipmi/src/ipmi-sdr-repo-cmds.h, libfreeipmi/src/ipmi-sdr-repo-cmds.c: Code cleanup.

	* libfreeipmi/, fish/: Adjust code appropriately.

2006-02-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, ipmipower/, fish/: Continued lan-cmds and
	msg-support-cmds cleanup.

	* libfreeipmi/src/ipmi-lan-interface.c (unassemble_ipmi_lan_pkt),
	libfreeipmi/src/ipmi-debug.c (ipmi_dump_lan_packet): Fix
	unassembly bug.

	* libfreeipmi/src/ipmi-dev-global-cmds.h,
	libfreeipmi/src/ipmi-dev-global-cmds.c: Cleanup.

	* fish/, bmc-info/, libfreeipmi/: Adjust code appropriately.

	* libfreeipmi/src/ipmi-comp-code-spec.h,
	libfreeipmi/src/ipmi-error.c: Add new reset watchdog timer error
	codes and error strings.

	* libfreeipmi/src/ipmi-chassis-cmds.h,
	libfreeipmi/src/ipmi-chassis-cmds.c: Code cleanup.

	* libfreeipmi/, ipmipower/: Adjusted code appropriately.

	* libfreeipmi/src/ipmi-serial-cmds.h,
	libfreeipmi/src/ipmi-serial-cmds.c: Support variable length
	configuration templates.  Code cleanup.

	* libfreeipmi/, fish/: Adjusted code appropriately.

	* libfreeipmi/src/ipmi-comp-code-spec.h: Add completion codes for
	lan, serial-modem, pef, and sol configuration commands.

	* libfreeipmi/src/ipmi-error.c: Add error messages for lan,
	serial-modem, pef, and sol configuration commands.

	* libfreeipmi/src/ipmi-cmd-spec.h: Add SOL commands.

	* libfreeipmi/src/ipmi-sol-param-spec.h: New file.

	* libfreeipmi/src/ipmi-sol-cmds.h,
	libfreeipmi/src/ipmi-sol-cmds.c: Code cleanup.

	* libfreeipmi/ : Adjust code appropriately.

2006-02-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/rmcp.c (tmpl_cmd_asf_presence_pong): Add
	security extensions bit field.

	* libfreeipmi/src/rmcp.h, libfreeipmi/src/rmcp.c: Code cleanup.

	* rmcpping/, ipmipower/, fish/: Adjust code appropriately.
