@@ -21,9 +21,6 @@
 #ifndef _IPMI_SEL_RECORD_TYPES_H
 #define _IPMI_SEL_RECORD_TYPES_H
 
-#define IPMI_SEL_FIRST_ENTRY    0x0 
-#define IPMI_SEL_LAST_ENTRY     0xFFFF 
-
 #define IPMI_V1_0_EVENT_MESSAGE_FORMAT    0x03
 #define IPMI_V1_5_EVENT_MESSAGE_FORMAT    0x04
 
