@@ -18,6 +18,10 @@
 
 	* libfreeipmi/, fish/: Adjust code appropriately.
 
+	* libfreeipmi/src/ipmi-sel-cmds.h, libfreeipmi/src/ipmi-sel-cmds.c: Code cleanup.
+
+	* libfreeipmi/, fish/: Adjust code appropriately.
+
 2006-02-15  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/, ipmipower/, fish/: Continued lan-cmds and
